<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Zero1</string>
    <string name="action_settings">设置</string>
    <string name="hello_world">Hello world!</string>
    <string name="query">查询</string>
    <string name="action_add">添加</string>
    <string name="inf_user">帐户信息</string>
    <string name="action_add_monitor">加入监控</string>
    <string name="action_refresh">刷新</string>
    <string name="action_order">排序</string>
    <string name="action_nextday">下一天</string>
    <string name="action_previousday">上一天</string>
    <string name="title_activity_init_activity_main">MainActivity</string>
    <string name="title_activity_trains_info">TrainsInfo</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_profile">用户信息</string>
    <string name="title_activity_book_view">BookViewActivity</string>

</resources>
